// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-filter-button should render disabled filter button 1`] = `
<wpp-filter-button .disabled="true" class="wpp-filter-button" exportparts="button, icon, text, inner, counter">
  <mock:shadow-root>
    <button aria-pressed="false" class="button primary" data-testid="wppFilterButton" part="button" type="button">
      <wpp-icon-tune class="icon" part="icon"></wpp-icon-tune>
      <span class="text" part="text">
        <slot part="inner"></slot>
      </span>
    </button>
  </mock:shadow-root>
</wpp-filter-button>
`;

exports[`wpp-filter-button should render filter button 1`] = `
<wpp-filter-button class="wpp-filter-button" exportparts="button, icon, text, inner, counter">
  <mock:shadow-root>
    <button aria-pressed="false" class="button primary" data-testid="wppFilterButton" part="button" type="button">
      <wpp-icon-tune class="icon" part="icon"></wpp-icon-tune>
      <span class="text" part="text">
        <slot part="inner"></slot>
      </span>
    </button>
  </mock:shadow-root>
</wpp-filter-button>
`;

exports[`wpp-filter-button should render filter button with counter 1`] = `
<wpp-filter-button .loading="true" class="wpp-filter-button" counter="3" exportparts="button, icon, text, inner, counter">
  <mock:shadow-root>
    <button aria-pressed="false" class="button primary" data-testid="wppFilterButton" part="button" type="button">
      <wpp-icon-tune class="icon" part="icon"></wpp-icon-tune>
      <span class="text" part="text">
        <slot part="inner"></slot>
      </span>
      <wpp-typography class="counter" part="counter" type="s-body">
        (3)
      </wpp-typography>
    </button>
  </mock:shadow-root>
  Filter
</wpp-filter-button>
`;
